<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".Fragment.UserFragment">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="top"
        android:background="#bce9fe"
        android:contextClickable="true">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/userInfo"
            android:textColor="#000000"
            android:textSize="28sp" />
    </com.google.android.material.appbar.AppBarLayout>


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="603dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="0dp"
        app:layout_anchorGravity="center">

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/avatar_background">


            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/avatar"
                android:src="@drawable/avatar2"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textInfoChildName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="195dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="0dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/info"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonEditAvatar"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp"
                android:backgroundTint="#DA6363"
                android:drawableRight="@drawable/edit_25px"
                android:drawablePadding="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="Edit"
                android:textAllCaps="false"
                android:textColor="#040404"
                app:iconPadding="0dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/editName"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/nickname"
            android:textColor="#000000" />

        <Button
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RelativeLayout"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#d9daee"
            android:drawableRight="@drawable/edit_25px"
            android:drawablePadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:iconPadding="0dp" />

        <EditText
            android:id="@+id/editTextPersonID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPersonName"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/editName"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/id"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextPersonPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPersonID"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/editName"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/Sdt"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextPersonPhone"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/buttonChangePass"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:text="@string/pass"
            android:textColor="#000000" />

        <Button
            android:id="@+id/buttonChangePass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editName"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="132dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#d9daee"
            android:drawableRight="@drawable/edit_25px"
            android:drawablePadding="0dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            android:paddingStart="0dp"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:paddingBottom="0dp"
            android:text="Edit"
            android:textAllCaps="false"
            android:textColor="#000000"
            app:iconPadding="0dp" />

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editTextTextPersonName5"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="130dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="129dp"
            android:background="@null"
            android:backgroundTint="#DA6363"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="Đăng Xuất"
            android:textSize="18sp" />

    </RelativeLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>